tests/error/error13.nex
class A : B
{
}

class B
{
}

new A;
